# libFXML

./: README.md  cli.py  pyproject.toml
engine/: main.py  page.py  sample.json  utils.py
engine/parsers/: json.py
