[tool.poetry]
name = "kweb"
version = "0.1.0"
description = ""
authors = ["eXoterr"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
defusedxml = "^0.7.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
Kodistubs = "^19.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
